--- a/page2.html
+++ b/page2.html
@@ -14,8 +14,9 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -38,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-<section class="menu cid-qyeEEh1DzN" once="menu" id="menu1-1f" data-rv-view="34">
+<section class="menu cid-qyeEEh1DzN" once="menu" id="menu1-1f" data-rv-view="828">
 
     
 
@@ -64,7 +65,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success display-4" href="index.html">&nbsp; &nbsp; &nbsp; HOME &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li>
                 <li class="nav-item"><a class="nav-link link text-success display-4" href="page3.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; PRODUCTS &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li>
-                <li class="nav-item"><a class="nav-link link text-success display-4" href="https://mobirise.com">&nbsp; &nbsp; &nbsp; &nbsp;FLASH SALE * &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="page1.html">&nbsp; &nbsp; SUPPORT &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="page2.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ABOUT US &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><div id="my-cart-11824902"></div>
+                <li class="nav-item"><a class="nav-link link text-success display-4" href="page7.html">&nbsp; &nbsp; &nbsp; * TOP DEALS * &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="page1.html">&nbsp; &nbsp; SUPPORT &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-success display-4" href="page2.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ABOUT US &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><div id="my-cart-11824902"></div>
 <div>
 <div id="my-cart-11824902"></div>
 <div>
@@ -80,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="cid-qyeM51OL2J" id="footer2-1g" data-rv-view="36">
+<section class="engine"><a href="https://mobirise.co/b">site creator</a></section><section class="cid-qyeM51OL2J" id="footer2-1g" data-rv-view="830">
 
     
 
@@ -112,10 +113,12 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
